monticore-generator/src/test/resources/cocos/invalid/A4004/A4004.mc4
package cocos.invalid.A4003;

grammar A4004  {

  A;

}
